--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
 /* <===================TYPOGRAPHY & FONTS===================> */
-
-/*@import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Quicksand&display=swap');*/
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* <===================CSS VARIABLES===================> */
-
 :root {
   --h1-size: 5rem;
   --h2-size: 2.1rem;
@@ -17,15 +14,16 @@
 }
 
 /* <===================UNIVERSAL CSS===================> */
-
 * {
   box-sizing: border-box;
   margin: 0;
-  font-family: "Be Vietnam Pro";
+  padding: 0;
+  font-family: "Be Vietnam Pro", sans-serif;
   color: #212121;
 }
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 .hz-margin {
   padding: 0 var(--horizontal-margin-spacing);
@@ -50,53 +48,41 @@ h3 {
   opacity: 0;
   transition: 1s all ease;
 }
-
 .reveal.active {
   transform: translateY(0);
   opacity: 1;
 }
 .text {
-  font-family: "Be Vietnam Pro";
+  font-family: "Be Vietnam Pro", sans-serif;
   font-size: var(--text-size);
-  line-height: 1.3rem;
+  line-height: 1.5rem;
 }
-.huge-btn {
-  display: block;
-  font-size: 1.5rem;
-  background: transparent;
-  border: 1px solid #212121;
-  padding: 15px 40px;
-  border-radius: 50px;
-  width: fit-content;
-  margin: 30px 0;
-}
-.huge-btn:hover {
-  color: grey;
-  border-color: grey;
-}
+
 .v-reposition-container {
-  position: absolute;
-  left: 0;
-  width: 100vw;
+  position: relative;
+  width: 100%;
 }
 .h-reposition-container {
-  width: 100vw;
-  position: relative;
-  top: 100vh;
-  font-family: "Be Vietnam Pro";
-}
-/* <===================NAVBAR===================> */
-
-nav {
-  height: 3vh;
   width: 100%;
-  margin-bottom: 20vh;
+  position: relative;
+  top: 0;
+  font-family: "Be Vietnam Pro", sans-serif;
+}
+
+/* <===================NAVBAR===================> */
+nav {
+  height: 80px;
+  width: 100%;
+  margin-bottom: 5vh;
+  position: relative;
+  z-index: 100;
 }
 label.logo {
   font-size: 35px;
   line-height: 80px;
   padding: 0 0 0 30px;
   font-weight: bold;
+  float: left;
 }
 nav ul {
   float: right;
@@ -133,59 +119,35 @@ a:hover {
   display: none;
 }
 @media (max-width: 1000px) {
-  label.logo {
-    font-size: 20px;
-  }
-  nav ul li a {
-    font-size: 10px;
-  }
-  html {
-    font-size: 10px;
-  }
+  label.logo { font-size: 20px; }
+  nav ul li a { font-size: 14px; }
 }
 @media (max-width: 570px) {
-  .checkbtn {
-    display: block;
-  }
-  ul {
+  .checkbtn { display: block; }
+  ul.text {
     position: fixed;
     width: 100%;
     height: 100vh;
-    -webkit-backdrop-filter: blur(5px);
+    background: rgba(255, 255, 255, 0.95);
     backdrop-filter: blur(5px);
     top: 80px;
     font-weight: bold;
     left: -100%;
     text-align: center;
     transition: all 0.5s;
+    z-index: 99;
   }
-  nav ul li {
-    display: block;
-    margin: 50px 0;
-    line-height: 30px;
-  }
-  nav li ul a {
-    font-size: 20px;
-  }
-  a:hover,
-  a.active {
-    background: none;
-    color: grey;
-  }
-  #check:checked ~ ul {
-    left: 0;
-  }
+  nav ul li { display: block; margin: 50px 0; line-height: 30px; }
+  nav li ul a { font-size: 20px; }
+  #check:checked ~ ul { left: 0; }
 }
 
 /* <===================HOME===================> */
-
 .home h1 {
   font-family: "Lobster", serif;
   font-weight: 400;
-  font-style: normal;
 }
 .container-in {
-  margin-top: 10vh;
   margin-top: 5%;
   flex-direction: row;
   justify-content: space-between;
@@ -214,20 +176,12 @@ a:hover {
   background-position-x: -110px;
 }
 @media (max-width: 1000px) {
-  .container-out {
-    flex-direction: column;
-  }
-  .home-img-sm {
-    display: block;
-    background-position-y: top;
-  }
-  #home-img-lg {
-    display: none;
-  }
+  .container-out { flex-direction: column; }
+  .home-img-sm { display: block; background-position-y: top; }
+  #home-img-lg { display: none; }
 }
 
 /* <===================TIMELINE===================> */
-
 .timeline {
   display: block;
   background-color: var(--grey-color-light);
@@ -238,6 +192,7 @@ a:hover {
   -webkit-backdrop-filter: blur(4px);
   backdrop-filter: blur(4px);
   padding: 8vh var(--horizontal-margin-spacing);
+  z-index: 10;
 }
 .timeline-container {
   display: flex;
@@ -245,15 +200,13 @@ a:hover {
   margin: 8vh 0;
 }
 .timeline-img {
-  background-image: url(assets/images/img2.jpeg);
+  background-image: url(assets/images/img4.jpeg);
   height: 70vh;
   width: 30vw;
   background-position: center;
   background-size: cover;
 }
-.timings {
-  margin: 30px;
-}
+.timings { margin: 30px; }
 .timeline-container .text {
   padding: 1rem 0 1rem 4rem;
   line-height: 2rem;
@@ -262,33 +215,94 @@ a:hover {
   .timeline {
     background-color: var(--grey-color);
     float: none;
-    position: relative;
     top: 0;
-    width: 100%;
     -webkit-backdrop-filter: blur(0);
     backdrop-filter: blur(0);
     height: fit-content;
   }
-  .timeline-container {
-    flex-direction: column;
-  }
-  .timeline-img {
-    height: 50vh;
-    width: 100%;
-  }
+  .timeline-container { flex-direction: column; }
+  .timeline-img { height: 50vh; width: 100%; }
+}
+
+/* <===================COUNTDOWN===================> */
+.countdown-section {
+  position: relative;
+  clear: both;
+  padding: 40vh 0;
+  text-align: center;
+  overflow: hidden;
+  z-index: 5;
+  width: 100%;
+  display: block;
+}
+.countdown-bg {
+  position: absolute;
+  inset: 0;
+  background-image: url("assets/images/img7.jpeg");
+  background-size: cover;
+  background-position: center;
+  filter: brightness(0.6);
+  z-index: -1;
+}
+.countdown-section h2 {
+  color: #fff;
+  margin-bottom: 40px;
+}
+.countdown.glass {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  padding: 40px;
+  backdrop-filter: blur(12px);
+  background: rgba(255, 255, 255, 0.18);
+  border-radius: 25px;
+  margin-inline: auto;
+  width: fit-content;
+  position: relative;
+  z-index: 10;
+}
+.time-box {
+  width: 120px;
+  padding: 20px 10px;
+  background: rgba(255, 255, 255, 0.35);
+  border-radius: 18px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+}
+.time-box span {
+  font-size: 3rem;
+  font-weight: 700;
+  display: block;
+}
+.time-box small {
+  font-size: 0.9rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  opacity: 0.85;
+}
+.fireworks-canvas {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 50%;
+    pointer-events: none;
+    z-index: 1;
+}
+#fireworks-left { left: 0; }
+#fireworks-right { right: 0; }
+
+@media (max-width: 768px) {
+  .countdown.glass { flex-wrap: wrap; gap: 15px; }
+  .time-box { width: 45%; }
 }
 
 /* <===================STORY===================> */
-
 #story {
   padding-top: 10vh;
   display: flex;
   flex-direction: row;
   margin: 10vh 0;
 }
-#story h3 {
-  width: 40vw;
-}
+#story h3 { width: 40vw; }
 #story p {
   width: 40vw;
   text-align: justify;
@@ -296,40 +310,16 @@ a:hover {
   line-height: var(--h3-size);
 }
 @media (max-width: 1000px) {
-  .h-reposition-container {
-    position: relative;
-    top: 0;
-  }
-  #story {
-    flex-direction: column;
-  }
-  #story h3 {
-    width: 100%;
-    margin: 5px 0;
-    font-size: var(--h3-size);
-  }
-  #story p {
-    width: 100%;
-    margin: 5px 0;
-    font-size: var(--text-size);
-    line-height: var(--text-size);
-  }
+  .h-reposition-container { top: 0; }
+  #story { flex-direction: column; }
+  #story h3 { width: 100%; margin: 5px 0; }
+  #story p { width: 100%; margin: 5px 0; font-size: var(--text-size); }
 }
 
-/* Add these styles */
-.story-title {
-  font-weight: 700;
-  line-height: 2.6rem;
-  margin-bottom: 20px;
-}
-
-.story-text {
-  line-height: 2.5rem;
-  margin-top: 10px;
-}
+.story-title { font-weight: 700; line-height: 2.6rem; margin-bottom: 20px; }
+.story-text { line-height: 2.5rem; margin-top: 10px; }
 
 /* <===================GALLERY===================> */
-
 .gallery {
   display: flex;
   padding: 20vh 0;
@@ -356,45 +346,24 @@ a:hover {
   background-position-x: center;
 }
 @media (max-width: 1000px) {
-  .gallery {
-    flex-direction: column;
-    padding: 0;
-  }
-  .gallery-img {
-    width: 100vw;
-    height: 160vh;
-    margin: 2px 0;
-    scale: 100%;
-  }
-  .gallery-img:nth-child(2) {
-    position: relative;
-    left: -(var(--horizontal-margin-spacing));
-  }
+  .gallery { flex-direction: column; padding: 0; }
+  .gallery-img { width: 100vw; height: 160vh; margin: 2px 0; transform: scale(1); }
+  .gallery-img:nth-child(2) { margin-left: 0; }
 }
 
 /* <===================QUOTE===================> */
-.quote {
-  margin: 10vh 0;
-}
+.quote { margin: 10vh 0; }
 .quote h1 {
   width: 55vw;
   font-size: 4rem;
   text-align: center;
   margin: auto;
 }
-.author {
-  text-align: center;
-  margin: 20px 0 10vh 0;
-}
 @media (max-width: 1570px) {
-  .quote h1 {
-    font-size: 2rem;
-    line-height: 2rem;
-  }
+  .quote h1 { font-size: 2rem; line-height: 2rem; }
 }
 
 /* <===================HANDS===================> */
-
 .hands {
   height: 100vh;
   width: 100%;
@@ -404,238 +373,181 @@ a:hover {
   background-position-x: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  flex-direction: column;
-}
-
-/* <===================STAY===================> */
-#stay {
-  background-color: var(--grey-color);
-  padding: 10vh var(--horizontal-margin-spacing);
-  width: 100%;
-}
-#parallax1 {
-  /* width: 100%; */
-  scale: 100%;
-}
-.stay-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  margin: 10vh 0;
-  gap: 30px;
-}
-.stay-item {
-  flex: 0.8;
-  padding: 0 15px;
-}
-.stay-item:first-child {
-  flex: 1.2;
-}
-.stay-item .text {
-  margin: 20px 0;
-  line-height: 2rem;
-}
-.links {
-  cursor: pointer;
-  text-decoration: underline;
-}
-@media (max-width: 768px) {
-  .stay-container {
-    flex-direction: column;
-  }
-  
-  .stay-item,
-  .stay-item:first-child {
-    flex: 1;
-    margin-bottom: 30px;
-  }
 }
 
 /* <===================REGISTRY===================> */
-
 #registry {
-  padding: 10vh var(--horizontal-margin-spacing) 0
-    var(--horizontal-margin-spacing);
+  padding: 10vh var(--horizontal-margin-spacing);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  min-height: 80vh;
 }
 .registry-container {
-  display: block;
-  width: 30vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 45vw;
+  text-align: center;
 }
 .registry-container .text {
-  text-align: justify;
+  text-align: center;
   margin: 10px 0;
-  line-height: 1rem;
+  line-height: 1.5rem;
 }
 .registry-img {
   display: block;
-  height: 90vh;
-  width: 50vw;
+  height: 80vh;
+  width: 45vw;
   background-image: url(assets/images/img8.jpeg);
   background-size: cover;
-  /* background-position-y: center;
-    background-position-x: center; */
   background-repeat: no-repeat;
+  border-radius: 10px;
+}
+.registry-img-sm { display: none; }
+.registry-img-lg { display: block; }
 
-  /* background-attachment: fixed; */
-}
-.registry-img-sm {
-  display: none;
-}
-.registry-img-lg {
-  display: block;
-}
 @media (max-width: 1000px) {
   #registry {
     flex-direction: column;
+    padding-bottom: 10vh;
+    min-height: auto;
   }
-  .registry-img {
-    width: 100%;
-    height: 60vh;
-    background-position: center;
-    background-position-y: 42%;
-    background-position-x: center;
-  }
+  .registry-container { width: 100%; margin-top: 30px; }
+  .registry-img { width: 100%; height: 60vh; background-position: center; }
   .registry-img-sm {
     margin-top: 10vh;
     display: block;
-  }
-  .registry-img-lg {
-    display: none;
-  }
-  .registry-container {
+    height: 50vh;
+    background-image: url(assets/images/img8.jpeg);
+    background-size: cover;
     width: 100%;
   }
-  #registry button {
-    margin-inline: auto;
-  }
+  .registry-img-lg { display: none; }
 }
 
 /* <===================PARTING MESSAGE===================> */
-.parting-message h1 {
-  margin-top: 40%;
-  text-align: center;
-}
-.parting-message button {
-  margin: 5vh auto;
-}
-
-/* <===================FOOTER===================> */
-
-footer {
-  margin-top: 5vh;
-  height: fit-content;
+.parting-message {
   width: 100%;
-  background-color: var(--grey-color);
-  padding: 5vh 20px;
-  padding-left: 3%;
-}
-footer h2 {
-  font-size: 1.3rem;
-  font-weight: normal;
-}
-
-.lang-switch {
-  background: none;
-  border: none;
-  cursor: pointer;
-  color: #212121;
-  font-family: "Be Vietnam Pro";
-  font-size: 17px;
-  padding: 7px 13px;
-  text-transform: uppercase;
-  font-weight: 600;
-}
-
-.lang-switch:hover {
-  color: orange;
-  transition: 0.5s;
-}
-
-/* Add this to your CSS */
-.modal {
-  display: flex;
-  position: fixed;
-  z-index: 1000;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  justify-content: center;
-  align-items: center;
-  backdrop-filter: blur(5px);
-}
-
-.modal-content {
-  background-color: white;
-  padding: 60px;
-  border-radius: 20px;
-  text-align: center;
-  max-width: 90%;
-  width: 500px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-}
-
-.modal-content h2 {
-  font-family: "Lobster", serif;
-  font-size: 2.5rem;
-  margin-bottom: 40px;
-  color: #212121;
-}
-
-.language-buttons {
   display: flex;
   flex-direction: column;
-  gap: 15px;
-  margin-top: 20px;
+  align-items: center;
+  justify-content: center;
+}
+.parting-message h1 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  text-align: center;
+  line-height: 1.2;
+}
+.parting-message .parting-text {
+  text-align: center;
+  font-size: 1.1rem;
+  max-width: 90%;
+  margin: 0 auto;
+}
+.parting-message button { margin: 5vh auto; }
+/* <=================== LOVE LETTER SECTION ===================> */
+#love-letter {
+  padding: 10vh var(--horizontal-margin-spacing);
+  background-color: #faf9f6; /* Màu giấy cũ nhẹ */
+  text-align: center;
 }
 
-.language-buttons button {
-  padding: 15px 30px;
-  font-size: 1.2rem;
-  cursor: pointer;
+#love-letter h2 {
+  margin-bottom: 40px;
+  font-family: "Lobster", serif;
+}
+
+.letter-container {
+  max-width: 800px;
+  margin: 0 auto;
+  background: #fff;
+  padding: 40px;
+  border-radius: 15px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.05);
+  border: 1px solid rgba(0,0,0,0.05);
+}
+
+.letter-tabs {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 20px;
+}
+
+.tab-btn {
   background: none;
-  border: 1px solid #212121;
+  border: none;
+  font-size: 1.2rem;
+  font-family: "Be Vietnam Pro", sans-serif;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 30px;
   transition: all 0.3s ease;
-  font-family: "Be Vietnam Pro";
-  width: 100%;
+  color: #888;
 }
 
-.language-buttons button:hover {
-  background-color: #212121;
-  color: white;
+.tab-btn:hover {
+  background-color: #f5f5f5;
+  color: #212121;
 }
 
-@media (max-width: 600px) {
-  .modal-content {
-    padding: 40px 20px;
-    width: 90%;
-  }
-  
-  .modal-content h2 {
-    font-size: 2rem;
-  }
-  
-  .language-buttons button {
-    padding: 12px 20px;
-    font-size: 1rem;
-  }
+.tab-btn.active {
+  background-color: #212121; /* Hoặc màu chủ đạo của bạn */
+  color: #fff;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.2);
 }
 
-.hidden {
-  display: none !important;
-}
-/* ===== RESET CƠ BẢN ===== */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.letter-content {
+  display: none; /* Ẩn mặc định */
+  animation: fadeIn 0.5s ease;
+  text-align: left;
 }
 
-/* ===== MUSIC BUTTON ===== */
+.letter-content.active-content {
+  display: block; /* Hiện khi active */
+}
+
+.letter-content h3 {
+  font-family: "Lobster", serif;
+  font-size: 1.8rem;
+  color: #212121;
+  padding: 0 0 20px 0;
+}
+
+.letter-content .text {
+  font-style: italic;
+  font-size: 1.2rem;
+  line-height: 2rem;
+  color: #555;
+  text-align: justify;
+}
+
+.signature {
+  margin-top: 30px;
+  text-align: right;
+  font-family: "Lobster", serif;
+  font-size: 2rem;
+  color: #b38b59; /* Màu chữ ký giả lập */
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+@media (max-width: 768px) {
+  .letter-container { padding: 20px; }
+  .tab-btn { font-size: 1rem; padding: 8px 15px; }
+}
+
+/* <===================FOOTER & MUSIC BUTTON===================> */
 .music-btn {
   position: fixed;
   top: 18px;
@@ -648,54 +560,71 @@ footer h2 {
   z-index: 1001;
   transition: transform 0.3s ease, opacity 0.3s ease;
 }
-
-.music-btn:hover {
-  transform: scale(1.1);
-  opacity: 0.8;
-}
-
-/* Khi đang bật nhạc */
+.music-btn:hover { transform: scale(1.1); opacity: 0.8; }
 .music-btn.playing i {
   color: #b38b59;
   animation: musicRotate 3s linear infinite;
 }
-
 @keyframes musicRotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
-
-/* Tooltip nhỏ */
-.music-btn::after {
-  content: attr(data-title);
-  position: absolute;
-  top: 130%;
-  right: 50%;
-  transform: translateX(50%);
-  font-size: 0.7rem;
-  background: rgba(0, 0, 0, 0.7);
-  color: #fff;
-  padding: 4px 6px;
-  border-radius: 4px;
-  white-space: nowrap;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.3s ease;
-}
-
-.music-btn:hover::after {
-  opacity: 1;
-}
-
-/* Mobile */
 @media (max-width: 768px) {
-  .music-btn {
-    top: 15px;
-    right: 20px;
-    font-size: 1.2rem;
-  }
+  .music-btn { top: 15px; right: 20px; font-size: 1.2rem; }
 }
+
+/* <===================LANGUAGE MODAL===================> */
+.modal {
+  display: flex;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(5px);
+}
+.modal-content {
+  background-color: white;
+  padding: 60px;
+  border-radius: 20px;
+  text-align: center;
+  max-width: 90%;
+  width: 500px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+}
+.modal-content h2 {
+  font-family: "Lobster", serif;
+  font-size: 2.5rem;
+  margin-bottom: 40px;
+}
+.language-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-top: 20px;
+}
+.language-buttons button {
+  padding: 15px 30px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  background: none;
+  border: 1px solid #212121;
+  transition: all 0.3s ease;
+  width: 100%;
+}
+.language-buttons button:hover {
+  background-color: #212121;
+  color: white;
+}
+.hidden {
+  display: none !important;
+}
+.lang-switch {
+  background: none; border: none; cursor: pointer;
+  color: #212121; font-size: 17px; padding: 7px 13px; font-weight: 600;
+}
+.lang-switch:hover { color: orange; transition: 0.5s; }
